source/stylesheets/_syntax.css.scss
// Wrapper div is added around the code table to make it stretch across
// the entire page.
.highlight-wrapper {
  @include border-radius(4px);
  @include box-shadow(#55463C 0 0 5px);
  background: #28211C;
  width: 1000%;
  padding: 10px 0 20px 0;
  margin-left: -500%;
  padding-left: 500%;
  @media (min-width: 768px) { margin-top: 20px; }
  margin-bottom: 20px;
  overflow: scroll;
  -webkit-overflow-scrolling: touch;
}

.wrap-button {
  @extend .visible-phone;
  height: 15px;
  line-height: 0.7em;
  font-size: 0.7em;
  text-align: right;
  a { color: lighten($bgDark, 20%); }
}


table.highlighttable {
  @extend [class*="span"];
  @extend .span8;
  margin-left: 0;

  .code pre {
    @extend [class*="span"];
    @extend .span8;
  }
}

// Don't use any fancy width tricks on mobile devices
@media (max-width: 767px) {
  .highlight-wrapper {
    width: inherit;
    margin-left: -16px;
    margin-right: -16px;
    padding-left: 0;
  }
}

// Line numbers
.linenos {
  width: 40px;
  text-align: right;

  .linenodiv > pre {
    color: #55463C;
    padding-right: 10px;
  }

  // hide line numbers on mobile
  @media (max-width: 767px) { display: none; }
}

.code {
  @media (max-width: 767px) { padding: 0 10px; }
}

// Code blocks
pre {
  background: none;
  border: none;
  font-family: 'Ubuntu Mono', "Consolas", "Courier New", "Courier", "FreeMono", monospace;
  font-size:100%;
  line-height: 1.3em;
  display: block;
  padding: 0;
  margin: 0;
  word-break: break-all;
  word-wrap: normal;
  white-space: pre;
  overflow: scroll;
  -webkit-overflow-scrolling: touch;

  &.wrap {
    white-space: pre-wrap;
  }
}

// Inline code blocks
code {
  @include border-radius(4px);
  border: none;
  background: #28211C;
  color: #BAAE9E;
  font-size: 70%;
  padding: 4px 8px;
}

.highlight .hll { background-color: #5A4B40 } // line highlighting
.highlight  { /*background: #272822;*/ color: #BAAE9E }
.highlight .c { color: #666666 } /* Comment */
.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
.highlight .k { color: #5EA6EA } /* Keyword */
.highlight .l { color: #937121 } /* Literal */
.highlight .n { color: #BAAE9E } /* Name */
.highlight .o { color: #7587A6 } /* Operator */
.highlight .p { color: #BAAE9E } /* Punctuation */
.highlight .cm { color: #666666 } /* Comment.Multiline */
.highlight .cp { color: #666666 } /* Comment.Preproc */
.highlight .c1 { color: #666666 } /* Comment.Single */
.highlight .cs { color: #666666 } /* Comment.Special */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .kc { color: #CF6A4C } /* Keyword.Constant */
.highlight .kd { color: #AC885B } /* Keyword.Declaration */
.highlight .kn { color: #7587A6 } /* Keyword.Namespace */
.highlight .kp { color: #5EA6EA } /* Keyword.Pseudo */
.highlight .kr { color: #5EA6EA } /* Keyword.Reserved */
.highlight .kt { color: #5EA6EA } /* Keyword.Type */
.highlight .ld { color: #54BE0D } /* Literal.Date */
.highlight .m { color: #937121 } /* Literal.Number */
.highlight .s { color: #54BE0D } /* Literal.String */
.highlight .na { color: #937121 } /* Name.Attribute */
.highlight .nb { color: #BAAE9E } /* Name.Builtin */
.highlight .nc { color: #937121 } /* Name.Class */
.highlight .no { color: #9B859D } /* Name.Constant */
.highlight .nd { color: #937121 } /* Name.Decorator */
.highlight .ni { color: #BAAE9E } /* Name.Entity */
.highlight .ne { color: #937121 } /* Name.Exception */
.highlight .nf { color: #937121 } /* Name.Function */
.highlight .nl { color: #BAAE9E } /* Name.Label */
.highlight .nn { color: #937121 } /* Name.Namespace */
.highlight .nx { color: #937121 } /* Name.Other */
.highlight .py { color: #BAAE9E } /* Name.Property */
.highlight .nt { color: #7587A6 } /* Name.Tag */
.highlight .nv { color: #7587A6 } /* Name.Variable */
.highlight .ow { color: #7587A6 } /* Operator.Word */
.highlight .w { color: #BAAE9E } /* Text.Whitespace */
.highlight .mf { color: #937121 } /* Literal.Number.Float */
.highlight .mh { color: #937121 } /* Literal.Number.Hex */
.highlight .mi { color: #937121 } /* Literal.Number.Integer */
.highlight .mo { color: #937121 } /* Literal.Number.Oct */
.highlight .sb { color: #54BE0D } /* Literal.String.Backtick */
.highlight .sc { color: #54BE0D } /* Literal.String.Char */
.highlight .sd { color: #54BE0D } /* Literal.String.Doc */
.highlight .s2 { color: #54BE0D } /* Literal.String.Double */
.highlight .se { color: #937121 } /* Literal.String.Escape */
.highlight .sh { color: #54BE0D } /* Literal.String.Heredoc */
.highlight .si { color: #54BE0D } /* Literal.String.Interpol */
.highlight .sx { color: #54BE0D } /* Literal.String.Other */
.highlight .sr { color: #54BE0D } /* Literal.String.Regex */
.highlight .s1 { color: #54BE0D } /* Literal.String.Single */
.highlight .ss { color: #54BE0D } /* Literal.String.Symbol */
.highlight .bp { color: #BAAE9E } /* Name.Builtin.Pseudo */
.highlight .vc { color: #BAAE9E } /* Name.Variable.Class */
.highlight .vg { color: #BAAE9E } /* Name.Variable.Global */
.highlight .vi { color: #BAAE9E } /* Name.Variable.Instance */
.highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */

